# thermal-guardian

./: .gitignore  DECISIONS.md  README.md  config.m2.fan_on.predictive.example.json  m0.example.json  m2.example.json  pyproject.toml
docs/: evidence_log.md  findings_lookahead.md  m0_checklist.md  m1_checklist.md  m2_checklist.md  m2_full_fan_on_n5_results.md  m2_full_protocol.md  m2_lite_completion.md  m3_thermal_stress_protocol.md
scripts/: analyze_lookahead.py  analyze_min_residence_tradeoff.py  analyze_q4_budget_match.py  run_m3_thermal_continuity_protocol.py  run_min_residence_sweep.py  run_q4_budget_match_protocol.py
src/edge_llm_guardian/: m0.py
src/thermal_guardian/: __init__.py  config.py  controller.py  logger.py  m0.py  m1.py  m2.py  monitor.py  q4_budget.py  router.py
tests/: test_config.py  test_controller.py  test_logger.py  test_m0.py  test_m1.py  test_m2.py  test_monitor.py  test_q4_budget.py  test_router.py
