[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "thermal-guardian"
version = "0.1.0"
description = "Thermal-aware OpenAI-compatible Q8/Q4 LLM router for Raspberry Pi 5."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "requests>=2.31",
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
thermal-guardian = "thermal_guardian.router:main"
thermal-guardian-m0 = "thermal_guardian.m0:main"
thermal-guardian-m1 = "thermal_guardian.m1:main"
thermal-guardian-m2 = "thermal_guardian.m2:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
